tests/neg-custom-args/captures/i16114.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/i16114.scala:18:19 -------------------------------------
18 |      expect[Cap^] { // error
   |      ^
   |      Reference `fs` is not included in the allowed capture set {io}
   |      of an enclosing function literal with expected type Unit ->{io} Unit.
   |
19 |        io.use()
20 |        fs
21 |      }
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/i16114.scala:24:19 -------------------------------------
24 |      expect[Cap^] { // error
   |      ^
   |      Reference `io` is not included in the allowed capture set {fs}
   |      of an enclosing function literal with expected type Unit ->{fs} Unit.
   |
25 |        fs.use()
26 |        io
27 |      }
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16114.scala:35:30 ---------------------------------------
35 |    val op4: Unit ->{} Unit = (x: Unit) =>  // error
   |                              ^
   |                              Found:    (x: Unit) ->{io} Unit
   |                              Required: Unit -> Unit
   |
   |                              Note that capability `io` cannot flow into capture set {}.
   |
36 |      expect[Cap^](io)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16114.scala:38:27 ---------------------------------------
38 |    val op: Unit -> Unit = (x: Unit) => // error
   |                           ^
   |                           Found:    (x: Unit) ->{io} Unit
   |                           Required: Unit -> Unit
   |
   |                           Note that capability `io` cannot flow into capture set {}.
   |
39 |      expect[Cap^] {
40 |...
42 |      }
   |
   | longer explanation available when compiling with `-explain`
